Fixed Styling Issue on Success Page * Aligned Text in center

--- a/success/src/containers/SuccessContainer/styles.css
+++ b/success/src/containers/SuccessContainer/styles.css
@@ -35,6 +35,8 @@ body {
     margin: 1em 0 .2em 0;
     color: var(--main-color);
     font-size: 1.2em;
+    display: block;
+    text-align: center;
 }
 
 .mainContainer a {
